# captain

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
src/: main.rs
