[package]
name = "service"
version = "0.1.0"
authors = ["kazami <kazamizero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee-http-client = "0.2.0-alpha.4"
jsonrpsee-http-server = "0.2.0-alpha.4"
jsonrpsee-types = "0.2.0-alpha.4"
serde_json = {version = "1", features = ["raw_value"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1", features = ["full"] }
